--- a/wp-content/themes/hotel-luxury/style.css
+++ b/wp-content/themes/hotel-luxury/style.css
@@ -569,6 +569,7 @@ body.no-titlebar .main-outer-wrapper {margin-top: 30px;}
     text-shadow: none;
     margin-bottom: 5px;
     letter-spacing: 3px;
+    padding: 0 250px 0 250px;
 }
 .carousel-caption p {
     text-align: center;
