--- a/wp-content/uploads/elementor/css/post-22.css
+++ b/wp-content/uploads/elementor/css/post-22.css
@@ -1,1 +1,1 @@
-.elementor-22 .elementor-element.elementor-element-1ee626c .gallery-item .gallery-caption{text-align:center;}
+.elementor-22 .elementor-element.elementor-element-1ee626c .gallery-item .gallery-caption{text-align:center;}.elementor-22 .elementor-element.elementor-element-652ee73 .gallery-item .gallery-caption{text-align:center;}
