--- a/wp-content/themes/hotel-luxury/style.css
+++ b/wp-content/themes/hotel-luxury/style.css
@@ -502,7 +502,6 @@ img { -ms-interpolation-mode: bicubic;border: 0;vertical-align:middle;height: au
 /* */
 .main-outer-wrapper{background: #fff;margin:0 auto;-webkit-box-shadow:  0px 0px 4px 0px rgba(0, 0, 0, 0.1);-moz-box-shadow:  0px 0px 4px 0px rgba(0, 0, 0, 0.1);box-shadow:  0px 0px 4px 0px rgba(0, 0, 0, 0.1);padding-top: 15px;position: relative;z-index:10;}
 .main-outer-wrapper.has-slider{margin-top:-100px;}
-body.has-titlebar .main-outer-wrapper {margin-top:-65px;}
 .page-wrapper{}
 .elementor-page .content-wrapper { padding: 5px;}
 
@@ -715,9 +714,17 @@ body.has-titlebar .main-outer-wrapper {margin-top:-65px;}
 .page-title-alt .btn{padding:6px 13px;margin-top:-13px;}
 .elementor-page .page-title-wrapper { margin-bottom: 0; }
 
-.titlebar-outer-wrapper{min-height:210px;overflow: hidden;position: relative;border-bottom:1px solid #ffffff; background-repeat: no-repeat; background-size: cover; background-position: center; background-image: url("assets/images/title-bar.jpeg")}
+.titlebar-outer-wrapper{min-height:350px; margin-top: 85px;overflow: hidden;position: relative;border-bottom:1px solid #ffffff; background-repeat: no-repeat; background-size: cover; background-position: center; background-image: url("assets/images/title-bar.jpeg")}
+@media ( max-width: 991px) {
+    .titlebar-outer-wrapper{
+        margin-top: 0;
+    }
+    .header-outer-wrapper{
+        position: relative;
+    }
+}
 .titlebar-outer-wrapper.titlebar-map{height:500px;}
-.titlebar-title { position: relative; padding: 50px 25px 25px; z-index: 99; width: 100%; height: 100%; text-align: center; }
+.titlebar-title { position: relative; padding: 150px 25px; z-index: 99; width: 100%; height: 100%; text-align: center; }
 .titlebar-title h2 {margin:0 0 5px 0;font-size:29px;color:#fff;text-transform: uppercase;font-weight: bold;letter-spacing: -0.7px;}
 .titlebar-title .breadcrumbs {color:#d2d2d2;font-size: 13px;font-style: italic;}
 .titlebar-title .breadcrumbs a:hover {color:#d2d2d2; text-decoration: none;}
